EXTRA_DIST = config.h ecm-params.h ecm.sln file_copy.bat readme.txt \
             tests.py yasm.rules ecm-params.h.win32.amd \
             ecm-params.h.win32.intel ecm-params.h.x64.amd \
             ecm-params.h.x64.intel mul_fft-params.h.win32.amd \
             mul_fft-params.h.win32.intel mul_fft-params.h.x64.amd \
             mul_fft-params.h.x64.intel mp_lib.vsprops 

DIST_SUBDIRS = assembler ecm libecm tune
